--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ aiohttp = "^3.8.5"
 pytest = "^7.2.2"
 black = "^23.1.0"
 ruff = "^0.0.264"
+pytest-asyncio = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
